--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "react-vite",
+  "homepage": "https://souravc192.github.io/KK-Wedding-RSVP"
   "private": true,
   "version": "0.0.0",
   "type": "module",
